Fixed span of columns on mobile.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1170,9 +1170,11 @@ section.page .section-description {
   }
 }
 
-.portfolio-item-page .portfolio-item-grid .testimonial-container {
-  grid-column: span 2;
-  max-width: 800px;
+@media (min-width: 768px) {
+  .portfolio-item-page .portfolio-item-grid .testimonial-container {
+    grid-column: span 2;
+    max-width: 800px;
+  }
 }
 
 @media (min-width: 768px) {
