--- a/resources/sass/pages/_portfolio.scss
+++ b/resources/sass/pages/_portfolio.scss
@@ -88,8 +88,10 @@
             grid-template-columns: repeat(2, 1fr);
         }
         .testimonial-container {
-            grid-column: span 2;
-            max-width: 800px;
+            @media (min-width: $grid-md) {
+                grid-column: span 2;
+                max-width: 800px;
+            }
         }
         // Last odd child
         > div:last-child:nth-child(odd) {
